src/cimgui_ext/include/cimgui_ext.h

CIMGUI_API int igExtPlot(int plotType, const char* label, float (*values_getter)(void* data, int idx), int (*get_tooltip)(void* data, int idx, char* buffer), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, float size_x, float size_y);
//node editor

typedef void* axNodeId;
typedef void* axLinkId;
typedef void* axPinId;
typedef enum
{
    axPinKind_Input,
    axPinKind_Output,
} axPinKind;
typedef enum
{
    axFlowDirection_Forward,
    axFlowDirection_Backward
} axFlowDirection;
typedef enum
{
    axCanvasSizeMode_FitVerticalView,
    axCanvasSizeMode_FitHorizontalView,
    axCanvasSizeMode_CenterOnly
} axCanvasSizeMode;
typedef enum
{
    axSaveReasonFlags_None       = 0x00000000,
    axSaveReasonFlags_Navigation = 0x00000001,
    axSaveReasonFlags_Position   = 0x00000002,
    axSaveReasonFlags_Size       = 0x00000004,
    axSaveReasonFlags_Selection  = 0x00000008,
    axSaveReasonFlags_AddNode    = 0x00000010,
    axSaveReasonFlags_RemoveNode = 0x00000020,
    axSaveReasonFlags_User       = 0x00000040
} axSaveReasonFlags;
typedef enum axStyleColor
{
    axStyleColor_Bg,
    axStyleColor_Grid,
    axStyleColor_NodeBg,
    axStyleColor_NodeBorder,
    axStyleColor_HovNodeBorder,
    axStyleColor_SelNodeBorder,
    axStyleColor_NodeSelRect,
    axStyleColor_NodeSelRectBorder,
    axStyleColor_HovLinkBorder,
    axStyleColor_SelLinkBorder,
    axStyleColor_HighlightLinkBorder,
    axStyleColor_LinkSelRect,
    axStyleColor_LinkSelRectBorder,
    axStyleColor_PinRect,
    axStyleColor_PinRectBorder,
    axStyleColor_Flow,
    axStyleColor_FlowMarker,
    axStyleColor_GroupBg,
    axStyleColor_GroupBorder,

    axStyleColor_Count
} axStyleColor;
typedef enum
{
    axStyleVar_NodePadding,
    axStyleVar_NodeRounding,
    axStyleVar_NodeBorderWidth,
    axStyleVar_HoveredNodeBorderWidth,
    axStyleVar_SelectedNodeBorderWidth,
    axStyleVar_PinRounding,
    axStyleVar_PinBorderWidth,
    axStyleVar_LinkStrength,
    axStyleVar_SourceDirection,
    axStyleVar_TargetDirection,
    axStyleVar_ScrollDuration,
    axStyleVar_FlowMarkerDistance,
    axStyleVar_FlowSpeed,
    axStyleVar_FlowDuration,
    axStyleVar_PivotAlignment,
    axStyleVar_PivotSize,
    axStyleVar_PivotScale,
    axStyleVar_PinCorners,
    axStyleVar_PinRadius,
    axStyleVar_PinArrowSize,
    axStyleVar_PinArrowWidth,
    axStyleVar_GroupRounding,
    axStyleVar_GroupBorderWidth,
    axStyleVar_HighlightConnectedLinks,
    axStyleVar_SnapLinkToPinDir,
    axStyleVar_HoveredNodeBorderOffset,
    axStyleVar_SelectedNodeBorderOffset,

    axStyleVar_Count
} axStyleVar;
typedef struct {
    float x;
    float y;
    float z;
    float w;
} axVec4;
typedef struct {
    float x;
    float y;
} axVec2;
typedef struct {
    axVec4  NodePadding;
    float   NodeRounding;
    float   NodeBorderWidth;
    float   HoveredNodeBorderWidth;
    float   HoverNodeBorderOffset;
    float   SelectedNodeBorderWidth;
    float   SelectedNodeBorderOffset;
    float   PinRounding;
    float   PinBorderWidth;
    float   LinkStrength;
    axVec2  SourceDirection;
    axVec2  TargetDirection;
    float   ScrollDuration;
    float   FlowMarkerDistance;
    float   FlowSpeed;
    float   FlowDuration;
    axVec2  PivotAlignment;
    axVec2  PivotSize;
    axVec2  PivotScale;
    float   PinCorners;
    float   PinRadius;
    float   PinArrowSize;
    float   PinArrowWidth;
    float   GroupRounding;
    float   GroupBorderWidth;
    float   HighlightConnectedLinks;
    float   SnapLinkToPinDir; // when true link will start on the line defined by pin direction
    axVec4  Colors[axStyleColor_Count];
} axStyle;
struct axConfig;
typedef int (*axConfigSaveSettings)(const char* data, size_t size, axSaveReasonFlags reason, void* userPointer);
typedef size_t (*axConfigLoadSettings)(char* data, void* userPointer);
typedef int (*axConfigSaveNodeSettings)(axNodeId nodeId, const char* data, size_t size, axSaveReasonFlags reason, void* userPointer);
typedef size_t (*axConfigLoadNodeSettings)(axNodeId nodeId, char* data, void* userPointer);
typedef void (*axConfigSession)(void* userPointer);
typedef void (*axNodeDraggedCallback)(axNodeId nodeId, float oldX, float oldY, float newX, float newY, void* userPointer);
typedef void (*axNodeResizedCallback)(axNodeId nodeId, axResizeCallbackData *data, void* userPointer);
CIMGUI_API axConfig* axConfigNew();
CIMGUI_API void axConfigFree(axConfig* config);
CIMGUI_API const char* axConfig_get_SettingsFile(axConfig* config);
CIMGUI_API void axConfig_set_SettingsFile(axConfig* config, const char *settingsFile);
CIMGUI_API axConfigSession axConfig_get_BeginSaveSession(axConfig *config);
CIMGUI_API void axConfig_set_BeginSaveSession(axConfig *config,  axConfigSession beginSaveSession);
CIMGUI_API axConfigSession axConfig_get_EndSaveSession(axConfig *config);
CIMGUI_API void axConfig_set_EndSaveSession(axConfig *config,  axConfigSession endSaveSession);
CIMGUI_API axConfigSaveSettings axConfig_get_SaveSettings(axConfig *config);
CIMGUI_API void axConfig_set_SaveSettings(axConfig *config, axConfigSaveSettings saveSettings);
CIMGUI_API axConfigLoadSettings axConfig_get_LoadSettings(axConfig *config);
CIMGUI_API void axConfig_set_LoadSettings(axConfig *config, axConfigLoadSettings loadSettings);
CIMGUI_API axConfigSaveNodeSettings axConfig_get_SaveNodeSettings(axConfig *config);
CIMGUI_API void axConfig_set_SaveNodeSettings(axConfig *config, axConfigSaveNodeSettings saveNodeSettings);
CIMGUI_API axConfigLoadNodeSettings axConfig_get_LoadNodeSettings(axConfig *config);
CIMGUI_API void axConfig_set_LoadNodeSettings(axConfig *config, axConfigLoadNodeSettings loadNodeSettings);
CIMGUI_API axNodeDraggedCallback axConfig_get_NodeDraggedHook(axConfig *config);
CIMGUI_API void axConfig_set_NodeDraggedHook(axConfig *config, axNodeDraggedCallback nodeDraggedHook);
CIMGUI_API void axConfig_set_NodeResizedHook(axConfig *config, axNodeResizedCallback nodeResizedHook);
CIMGUI_API void* axConfig_get_UserPointer(axConfig* config);
CIMGUI_API void axConfig_set_UserPointer(axConfig* config, void* userPointer);
//TODO: Custom Zoom Levels

CIMGUI_API axCanvasSizeMode axConfig_get_CanvasSizeMode(axConfig* config);
CIMGUI_API void axConfig_set_CanvasSizeMode(axConfig* config, axCanvasSizeMode canvasSizeMode);
CIMGUI_API int axConfig_get_DragButtonIndex(axConfig* config);
CIMGUI_API void axConfig_set_DragButtonIndex(axConfig* config, int dragButtonIndex);
CIMGUI_API int axConfig_get_SelectButtonIndex(axConfig* config);
CIMGUI_API void axConfig_set_SelectButtonIndex(axConfig* config, int selectButtonIndex);
CIMGUI_API int axConfig_get_NavigateButtonIndex(axConfig* config);
CIMGUI_API void axConfig_set_NavigateButtonIndex(axConfig* config, int navigateButtonIndex);
CIMGUI_API int axConfig_get_ContextMenuButtonIndex(axConfig* config);
CIMGUI_API void axConfig_set_ContextMenuButtonIndex(axConfig* config, int contextMenuButtonIndex);
CIMGUI_API int axConfig_get_EnableSmoothZoom(axConfig* config);
CIMGUI_API void axConfig_set_EnableSmoothZoom(axConfig* config, int smoothZoom);
CIMGUI_API float axConfig_get_SmoothZoomPower(axConfig* config);
CIMGUI_API void axConfig_set_SmoothZoomPower(axConfig* config, float smoothZoomPower);
struct axEditorContext;
CIMGUI_API void axSetCurrentEditor(axEditorContext* ctx);
CIMGUI_API axEditorContext* axGetCurrentEditor();
CIMGUI_API axEditorContext* axCreateEditor(axConfig* config);
CIMGUI_API void axDestroyEditor(axEditorContext* ctx);
CIMGUI_API const axConfig* axGetConfig(axEditorContext* ctx);
CIMGUI_API axStyle* axGetStyle();
CIMGUI_API const char* axGetStyleColorName(axStyleColor colorIndex);
CIMGUI_API void axPushStyleColor(axStyleColor colorIndex, axVec4* color);
CIMGUI_API void axPopStyleColor(int count);
CIMGUI_API void axPushStyleVar1(axStyleVar varIndex, float value);
CIMGUI_API void axPushStyleVar2(axStyleVar varIndex, axVec2* value);
CIMGUI_API void axPushStyleVar4(axStyleVar varIndex, axVec4* value);
CIMGUI_API void axPopStyleVar(int count);
CIMGUI_API void axBegin(const char* id, axVec2* size);
CIMGUI_API void axEnd();
CIMGUI_API void axBeginNode(axNodeId id);
CIMGUI_API void axBeginPin(axPinId id, axPinKind kind);
CIMGUI_API void axPinRect(axVec2* a, axVec2* b);
CIMGUI_API void axPinPivotRect(axVec2* a, axVec2* b);
CIMGUI_API void axPinPivotSize(axVec2* size);
CIMGUI_API void axPinPivotScale(axVec2* scale);
CIMGUI_API void axPinPivotAlignment(axVec2* alignment);
CIMGUI_API void axEndPin();
CIMGUI_API void axGroup(axVec2* size);
CIMGUI_API void axEndNode();
CIMGUI_API int axBeginGroupHint(axNodeId nodeId);
CIMGUI_API void axGetGroupMin(axVec2 *gmin);
CIMGUI_API void axGetGroupMax(axVec2 *gmax);
CIMGUI_API void* axGetHintForegroundDrawList();
CIMGUI_API void* axGetHintBackgroundDrawList();
CIMGUI_API void axEndGroupHint();
CIMGUI_API void* axGetNodeBackgroundDrawList(axNodeId nodeId);
CIMGUI_API int axLink(axLinkId id, axPinId startPinId, axPinId endPinId, axVec4* color, float thickness);
CIMGUI_API void axFlow(axLinkId linkId, axFlowDirection direction);
CIMGUI_API int axBeginCreate(axVec4* color, float thickness);
CIMGUI_API int axQueryNewLink(axPinId* startId, axPinId* endId);
CIMGUI_API int axQueryNewLink_Styled(axPinId* startId, axPinId* endId, axVec4* color, float thickness);
CIMGUI_API int axQueryNewNode(axPinId* pinId);
CIMGUI_API int axQueryNewNode_Styled(axPinId* pinId, axVec4* color, float thickness);
CIMGUI_API int axAcceptNewItem();
CIMGUI_API int axAcceptNewItem_Styled(axVec4* color, float thickness);
CIMGUI_API void axRejectNewItem();
CIMGUI_API void axRejectNewItem_Styled(axVec4* color, float thickness);
CIMGUI_API void axEndCreate();
CIMGUI_API int axBeginDelete();
CIMGUI_API int axQueryDeletedLink(axLinkId* linkId, axPinId* startId, axPinId* endId);
CIMGUI_API int axQueryDeletedNode(axNodeId* nodeId);
CIMGUI_API int axAcceptDeletedItem(int deleteDependencies);
CIMGUI_API void axRejectDeletedItem();
CIMGUI_API void axEndDelete();
CIMGUI_API void axSetNodePosition(axNodeId nodeId, axVec2* editorPosition);
CIMGUI_API void axSetGroupSize(axNodeId nodeId, axVec2* size);
CIMGUI_API void axGetNodePosition(axNodeId nodeId, axVec2* pos);
CIMGUI_API void axGetNodeSize(axNodeId nodeId, axVec2* sz);
CIMGUI_API void axCenterNodeOnScreen(axNodeId nodeId);
CIMGUI_API void axSetNodeZPosition(axNodeId nodeId, float z); // Sets node z position, nodes with higher value are drawn over nodes with lower value
CIMGUI_API float axGetNodeZPosition(axNodeId nodeId); // Returns node z position, defaults is 0.0f
CIMGUI_API void axRestoreNodeState(axNodeId nodeId);
CIMGUI_API void axSuspend();
CIMGUI_API void axResume();
CIMGUI_API int axIsSuspended();
CIMGUI_API int axIsActive();
CIMGUI_API int axHasSelectionChanged();
CIMGUI_API int axGetSelectedObjectCount();
CIMGUI_API int axGetSelectedNodes(axNodeId* nodes, int size);
CIMGUI_API int axGetSelectedLinks(axLinkId* links, int size);
CIMGUI_API int axIsNodeSelected(axNodeId nodeId);
CIMGUI_API int axIsLinkSelected(axLinkId linkId);
CIMGUI_API void axClearSelection();
CIMGUI_API void axSelectNode(axNodeId nodeId, int append);